fix styling on mobile

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -584,6 +584,15 @@ nav {
     padding-bottom: 3rem;
   }
 
+  .section__container.deals__container {
+    padding-top: 3rem;
+    padding-bottom: 8rem;
+  }
+  
+  .section__container.banner__container {
+    padding-top: 3rem;
+  }
+
   .product__grid {
     grid-template-columns: repeat(3, 1fr);
     gap: 1rem;
